--- a/Web-2020-PJ1/src/css/style-browse.css
+++ b/Web-2020-PJ1/src/css/style-browse.css
@@ -187,7 +187,7 @@ select option{
     .aside{
         text-indent: 10px;
     }
-    .aside div{
+    .search,.hotcity{
         margin-right: 0;
     }
     .search{
@@ -241,7 +241,7 @@ select option{
    .aside{
        width: 100%;
    }
-   .aside div,.main{
+   .search,.hotcity,.main{
         margin:10px 10px;
    }
    .content{
