--- a/Web-2020-PJ1/src/css/style-search.css
+++ b/Web-2020-PJ1/src/css/style-search.css
@@ -150,7 +150,7 @@ nav a:nth-child(4):hover{
     .choice{
         font-size: 16px;
     }
-    .descinput,.result,.textinput{
+    .descinput,.main,.result,.textinput{
         font-size: 16px;
     }
     .button{
@@ -171,6 +171,9 @@ nav a:nth-child(4):hover{
     }
 }
 @media only screen and (max-width:600px){
+    .main{
+        height: 2em;
+    }
     .choice{
         line-height: 2em;
     }
